demo01-Azure/myNIC.tf
resource "azurerm_network_interface" "myterraformnic" {
    name                = "user22NIC"
    location            = "koreacentral"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    network_security_group_id = "${azurerm_network_security_group.myterraformnsg.id}"
    
    ip_configuration {
        name                          = "user22NicConfiguration"
        subnet_id                     = "${azurerm_subnet.myterraformsubnet.id}"
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id          = "${azurerm_public_ip.myterraformpublicip.id}"
    }
    
    tags {
        environment = "user22 Terraform Demo"
    }
}
